--- a/package.json
+++ b/package.json
@@ -9,12 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@uiw/react-markdown-editor": "^4.0.1",
+    "axios": "^0.26.1",
+    "firebase": "^9.6.8",
     "next": "12.1.0",
+    "next-auth": "^4.3.0",
+    "next-remove-imports": "^1.0.6",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "react-markdown": "^8.0.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.4",
     "eslint": "8.11.0",
-    "eslint-config-next": "12.1.0"
+    "eslint-config-next": "12.1.0",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.23"
   }
 }
